app/javascript/flavours/polyam/styles/components/columns.scss
/* ... */
.filtered-notifications-banner {
  display: flex;
  align-items: center;
  border: 1px solid var(--background-border-color);
  border-top: 0;
  padding: 15px; // Polyam: Keep old padding
  gap: 16px;
  color: $darker-text-color;
  text-decoration: none;

  &:hover,
  &:active,
  &:focus {
    color: $secondary-text-color;
  }

  .icon {
    width: 24px;
    height: 24px;
    padding: 2px;
  }

  &__text {
    flex: 1 1 auto;
    font-style: 14px;
    line-height: 20px;

    strong {
      font-size: 16px;
      line-height: 24px;
      display: block;
    }
  }

  &__badge {
    display: flex;
    align-items: center;
    border-radius: 999px;
    background: var(--background-border-color);
    color: $darker-text-color;
    padding: 4px;
    padding-inline-end: 8px;
    gap: 6px;
    font-weight: 500;
    font-size: 11px;
    line-height: 16px;

    &__badge {
      background: $ui-button-background-color;
      color: $white;
      border-radius: 100px;
      padding: 2px 8px;
    }
  }
}

.notification-request {
  display: flex;
  align-items: center;
  gap: 16px;
  padding: 15px;
  border-bottom: 1px solid var(--background-border-color);

  &__link {
    display: flex;
    align-items: center;
    gap: 12px;
    flex: 1 1 auto;
    text-decoration: none;
    color: inherit;
    overflow: hidden;

    .account__avatar {
      flex-shrink: 0;
    }
  }

  &__name {
    flex: 1 1 auto;
    color: $darker-text-color;
    font-style: 14px;
    line-height: 20px;
    overflow: hidden;
    text-overflow: ellipsis;

    &__display-name {
      display: flex;
      align-items: center;
      gap: 6px;
      font-size: 16px;
      letter-spacing: 0.5px;
      line-height: 24px;
      color: $secondary-text-color;
    }

    .filtered-notifications-banner__badge {
      background-color: $highlight-text-color;
      border-radius: 4px;
      padding: 1px 6px;
    }
  }

  &__actions {
    display: flex;
    align-items: center;
    gap: 8px;

    .icon-button {
      border-radius: 4px;
      border: 1px solid var(--background-border-color);
      padding: 5px;
    }
  }
}

